--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,17 +1,3 @@
-.regex
-  input
-    font-family inherit
-    font-size inherit
-    border none
-
-#test-string
-  color blue
-
-.results-view
-  ol
-    counter-reset o-counter -1
-    list-style-type none
-
-    li:before
-      content '[' counter(o-counter) '] = '
-      counter-increment o-counter
+@require '../bower/angular/angular-csp.css';
+@require '../bower/angular-material/angular-material.css';
+@require '../bower/angular-material/angular-material.layouts.css';
